printOnlyArrayIisLessOrEqualToI